# OneNetworkJiraAPIProcessor

./: .gitignore  create_issues.py  crew.py  crew_theme.py  customfield_dict.json  import_issues_from_csv-PAS.py  install.md  jira_tool.py  pyproject.toml  query_api.py  updater.py
Bayer/: Bayer_PartnerMaster.xlsx  Bayer_PartnerProvidedList.xlsx  Bayer_VendorMasterFinalList.xlsx  check.xlsx
Partner Onboarding/: _install.bat  updater.py
