[tool.poetry]
name = "jqlv2"
version = "0.10"
description = ""
authors = ["Jason Estrada"]
license = "One Network Enterprises"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.30.11"
crewai-tools = "^0.2.6"
python-dotenv = "^1.0.1"
load-dotenv = "^0.1.0"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
postmark = "^1.0.0"
postmarker = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
